--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -48,8 +48,8 @@ body, html {
 
 /* Conteúdo centralizado */
 .home-content {
-  max-width: 600px;
-  width: 100%;
+  max-width: 700px;
+  width: 100vw;
   padding: 40px;
   background-color: rgba(36, 46, 66, 0.7);
   border-radius: 16px;
